text in 3d scenario

--- a/Threejs/index.html
+++ b/Threejs/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-  <canvas id="c"></canvas>
+  <div id="container">
+    <canvas id="c"></canvas>
+    <div id="labels"></div>
+  </div>
 </body>
 
 </html>
