--- a/AstrogameClass/index.html
+++ b/AstrogameClass/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Three.js</title>
   <link href="style.css" rel="stylesheet" />
+  <script src='menger.js'></script>
   <script type="module" src='main.js'></script>
 </head>
 
