--- a/AstrogameClass/index.html
+++ b/AstrogameClass/index.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <title>Three.js</title>
+  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <link href="style.css" rel="stylesheet" />
-  <script src='menger.js'></script>
-  <script type="module" src='main.js'></script>
+  <script src='./menger.js'></script> 
 </head>
-
 <body>
-  <div id="container">
-    <canvas id="c"></canvas>
-    <div id="labels"></div>
-  </div>
+  <script type="module" src='./main.js'></script>
 </body>
-
 </html>
