--- a/AstrogameClass/index.html
+++ b/AstrogameClass/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Three.js</title>
+  <title>Astro Game</title>
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <link href="style.css" rel="stylesheet" />
   <script src='./menger.js'></script> 
