--- a/AstrogameServer/index.html
+++ b/AstrogameServer/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Three.js</title>
+  <title>Astro Game</title>
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-  <link href="style.css" rel="stylesheet" />
-  <script src='./menger.js'></script> 
+  <script src="/socket.io/socket.io.js"></script>
+  <link href="/static/style.css" rel="stylesheet" /> 
 </head>
 <body>
-  <script type="module" src='./main.js'></script>
+  <script type="module" src='/static/main.js'></script>
 </body>
 </html>
