AstrogameServer remove died player

--- a/AstrogameServer/index.html
+++ b/AstrogameServer/index.html
@@ -9,5 +9,8 @@
 </head>
 <body>
   <script type="module" src='/static/main.js'></script>
+  <p id="name-text">Wilkommen zum Astrobattle Royale.<br>
+    Gib hier deinen Namen ein</p>
+  <input type="text" id="name-input" >
 </body>
 </html>
