--- a/AstrogameServer/index.html
+++ b/AstrogameServer/index.html
@@ -8,6 +8,11 @@
   <link href="/static/style.css" rel="stylesheet" /> 
 </head>
 <body>
+  <div>
+    <p id="score"> </p>
+    <p id="lives"> </p>
+    <p id="gameover"></p>
+  </div>
   <script type="module" src='/static/main.js'></script>
   <p id="name-text">Wilkommen zum Astrobattle Royale.<br>
     Gib hier deinen Namen ein</p>
