--- a/AstrogameServer/index.html
+++ b/AstrogameServer/index.html
@@ -4,17 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>Astro Game</title>
-  <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <script src="/socket.io/socket.io.js"></script>
   <link href="/static/style.css" rel="stylesheet" />
 </head>
 
 <body>
-  <p id="gameover"></p>
+  <div id="target"></div>
   <script type="module" src='/static/main.js'></script>
-  <p id="name-text">Wilkommen zum Astrobattle Royale.<br>
-    Gib hier deinen Namen ein</p>
-  <input type="text" id="name-input">
 </body>
 
 </html>
