--- a/Astrogames/ThreejsServergame_2/index.html
+++ b/Astrogames/ThreejsServergame_2/index.html
@@ -1,14 +1,16 @@
+<!DOCTYPE html>
 <html>
 
 <head>
-  <title>Multiplayer Astrogame</title>
-  
+  <meta charset="utf-8">
+  <title>Astro Game</title>
   <script src="/socket.io/socket.io.js"></script>
+  <link href="/static/style.css" rel="stylesheet" />
 </head>
 
 <body>
   <div id="target"></div>
-  <script src="/static/sketch.js"></script>
+  <script type="module" src='/static/main.js'></script>
 </body>
 
 </html>
