--- a/Astrogames/AstrogameClass/index.html
+++ b/Astrogames/AstrogameClass/index.html
@@ -7,6 +7,7 @@
   <link href="style.css" rel="stylesheet" /> 
 </head>
 <body>
+  <div id="target"></div>
   <script type="module" src='./main.js'></script>
 </body>
 </html>
